<resources>
    <string name="app_name">Dares</string>
    <string name="settings">Settings</string>
    <string name="lorem_ipsum">Sugar plum sugar plum gummies donut jelly powder. Icing muffin cheesecake liquorice wafer bonbon. Bonbon tootsie roll halvah. Lollipop macaroon bear claw chocolate cake. Chocolate bar gummi bears candy cheesecake icing oat cake. Cake chocolate cake liquorice pie. Donut halvah lollipop. Bear claw lollipop sweet roll cookie dragée dragée donut candy. Cheesecake liquorice marzipan dragée muffin chocolate dessert jujubes. Cupcake ice cream tootsie roll bonbon croissant gingerbread ice cream danish. Jelly beans donut jujubes sugar plum. Tootsie roll tiramisu chupa chups dragée cheesecake brownie chocolate bar chocolate bar icing. Apple pie cake carrot cake gingerbread candy canes</string>
    <string name="article_detail_more_info">Description</string>

    <string name="user_id">user_1</string>
    <string name="samples_title">Add Dare</string>
    <string name="samples_subhead">Add a dare</string>
    <string name="samples_hint_title">Title</string>
    <string name="samples_hint_summary">Summary</string>
    <string name="samples_hint_description">Description</string>
    <string name="samples_hint_reward">Reward</string>
    <string name="samples_hint_status">Completed Status</string>


    <string name="navigation_title">My navigation title</string>
    <string name="navigation_quotes">Dares</string>
    <string name="navigation_samples">Add Dare</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_sub_items">Categories</string>
    <string name="navigation_dummy_item_1">Action</string>
    <string name="navigation_dummy_item_2">Social</string>
    <string name="navigation_dummy_item_3">Eccentric</string>
</resources>
