<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/samples_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/samples_fab"
        android:orientation="vertical"
        android:padding="@dimen/regular_offset">

        <TextView
            android:id="@+id/sample_title"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/samples_title" />

        <TextView
            android:id="@+id/sample_subhead"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/samples_subhead" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/sample_text_username_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/sample_text_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/samples_hint_title" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/sample_text_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/samples_hint_summary"
                android:inputType="textEmailAddress" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/sample_text_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/samples_hint_description"
                android:layout_weight="1"
                android:inputType="textCapSentences|textMultiLine"
                android:maxLength="5000"
                android:maxLines="5" />
            />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/sample_text_reward"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/samples_hint_reward"
                android:inputType="textShortMessage" />
            />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/sample_status"
                style="@style/TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="15dp"
                android:text="@string/samples_hint_status" />

            <Spinner
                android:id="@+id/dropStatus"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:drawSelectorOnTop="true"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/samples_fab"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_alignParentBottom="true"
        android:fitsSystemWindows="true">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="@dimen/regular_offset"
            android:src="@drawable/ic_done" />

    </android.support.design.widget.CoordinatorLayout>

</RelativeLayout>